syntax = "proto3";
option csharp_namespace = "TenantService";
package tenant;
import "google/api/annotations.proto";

service TenantServiceGrpc {
  rpc CreateNewTenantId (RequestCreateTenant) returns (ResponseCreateTenant) {
    option (google.api.http) = {
      post: "/tenant",
      body: "*"
    };
  }
}

message RequestCreateTenant {
  string userId = 1;
  string name = 2;
}

message BaseResponse {
  string message = 1;
  int32 code = 2;
}

message ResponseCreateTenant {
  BaseResponse baseResponse = 1;
}